--- a/index.html
+++ b/index.html
@@ -3,59 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>City Management</title>
+    <title>City Coordinates Map</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <style>
+        #map {
+            height: 600px;
+            width: 100%;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        #citySelect {
+            margin: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>City Management</h1>
-    <form id="addCityForm">
-        <input type="text" id="cityName" placeholder="City Name" required>
-        <input type="number" step="any" id="cityLat" placeholder="Latitude" required>
-        <input type="number" step="any" id="cityLng" placeholder="Longitude" required>
-        <button type="submit">Add City</button>
-    </form>
-    <h2>Cities</h2>
-    <ul id="cityList"></ul>
+    <h1>Select a City to See its Coordinates</h1>
+    <select id="citySelect">
+        <option value="">Select a city...</option>
+    </select>
+    <div id="map"></div>
 
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', (event) => {
-            const form = document.getElementById('addCityForm');
-            const cityList = document.getElementById('cityList');
+            const citySelect = document.getElementById('citySelect');
+            const map = L.map('map').setView([0, 0], 2);
 
-            function loadCities() {
-                const cities = JSON.parse(localStorage.getItem('cities')) || [];
-                cityList.innerHTML = '';
-                cities.forEach((city, index) => {
-                    const li = document.createElement('li');
-                    li.textContent = `${city.name} (Lat: ${city.lat}, Lng: ${city.lng})`;
-                    cityList.appendChild(li);
+            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+            }).addTo(map);
+
+            fetchCities(1);
+
+            function fetchCities(page) {
+                fetch(`https://geolocationsapi-koralks-projects.vercel.app/api/cities?page=${page}&limit=100`)
+                    .then(response => response.json())
+                    .then(data => {
+                        populateCitySelect(data.data);
+                        if (data.page < data.totalPages) {
+                            fetchCities(page + 1);
+                        }
+                    })
+                    .catch(error => console.error('Error fetching cities:', error));
+            }
+
+            function populateCitySelect(cities) {
+                cities.forEach(city => {
+                    const option = document.createElement('option');
+                    option.value = JSON.stringify({ lat: city.lat, lng: city.lng });
+                    option.textContent = city.name;
+                    citySelect.appendChild(option);
                 });
             }
 
-            function fetchInitialCities() {
-                fetch('cities.json')
-                    .then(response => response.json())
-                    .then(data => {
-                        if (!localStorage.getItem('cities')) {
-                            localStorage.setItem('cities', JSON.stringify(data));
-                        }
-                        loadCities();
-                    })
-                    .catch(error => console.error('Error fetching initial cities:', error));
-            }
-
-            form.addEventListener('submit', (event) => {
-                event.preventDefault();
-                const name = document.getElementById('cityName').value;
-                const lat = parseFloat(document.getElementById('cityLat').value);
-                const lng = parseFloat(document.getElementById('cityLng').value);
-                const cities = JSON.parse(localStorage.getItem('cities')) || [];
-                cities.push({ name, lat, lng });
-                localStorage.setItem('cities', JSON.stringify(cities));
-                loadCities();
-                form.reset();
+            citySelect.addEventListener('change', (event) => {
+                const selectedCity = JSON.parse(event.target.value);
+                if (selectedCity) {
+                    map.setView([selectedCity.lat, selectedCity.lng], 10);
+                    L.marker([selectedCity.lat, selectedCity.lng]).addTo(map)
+                        .bindPopup(`<b>${event.target.options[event.target.selectedIndex].text}</b><br>Lat: ${selectedCity.lat}, Lng: ${selectedCity.lng}`)
+                        .openPopup();
+                }
             });
-
-            fetchInitialCities();
         });
     </script>
 </body>
