--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
             width: 100%;
             margin-top: 10px;
         }
+        #loadMore {
+            margin: 10px 0;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #loadMore:disabled {
+            background-color: #ddd;
+            cursor: not-allowed;
+        }
         #infoMessage {
             margin: 10px 0;
             font-size: 14px;
@@ -45,7 +58,8 @@
     <div id="controls">
         <div id="loading">Loading cities...</div>
         <select id="citySelect"></select>
-        <div id="infoMessage">All cities are loaded. Use the search box to find your city.</div>
+        <button id="loadMore">Load More</button>
+        <div id="infoMessage">If you can't find the city you're looking for, click "Load More" until you see the city.</div>
     </div>
     <div id="map"></div>
 
@@ -55,24 +69,36 @@
     <script>
         document.addEventListener('DOMContentLoaded', (event) => {
             const citySelect = $('#citySelect');
+            const loadMoreButton = document.getElementById('loadMore');
             const loadingIndicator = document.getElementById('loading');
             const map = L.map('map').setView([0, 0], 2);
+            let currentPage = 1;
+            const limit = 100;  // Set a reasonable limit for each request
+            let isLoading = false;
 
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
                 attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
             }).addTo(map);
 
-            function fetchAllCities() {
+            function fetchCities(page) {
+                if (isLoading) return;
+                isLoading = true;
                 loadingIndicator.style.display = 'block';
-                fetch(`https://geolocationsapi-koralks-projects.vercel.app/api/cities?page=1&limit=209359`) // Fetch all cities in one go
+                fetch(`https://geolocationsapi-koralks-projects.vercel.app/api/cities?page=${page}&limit=${limit}`)
                     .then(response => response.json())
                     .then(data => {
                         populateCitySelect(data.data);
+                        if (data.page >= data.totalPages) {
+                            loadMoreButton.disabled = true;
+                            loadMoreButton.textContent = 'No More Cities';
+                        }
+                        isLoading = false;
                         loadingIndicator.style.display = 'none';
                     })
                     .catch(error => {
                         console.error('Error fetching cities:', error);
-                        loadingIndicator.textContent = 'Error loading cities';
+                        isLoading = false;
+                        loadingIndicator.style.display = 'none';
                     });
             }
 
@@ -91,6 +117,10 @@
                 allowClear: true
             });
 
+            loadMoreButton.addEventListener('click', () => {
+                fetchCities(++currentPage);
+            });
+
             citySelect.on('select2:select', (event) => {
                 const selectedCity = JSON.parse(event.params.data.id);
                 if (selectedCity) {
@@ -102,7 +132,7 @@
             });
 
             // Initial fetch
-            fetchAllCities();
+            fetchCities(currentPage);
         });
     </script>
 </body>
