--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
                         .openPopup();
                 }
             });
+
+            // Initial fetch
+            searchCities('');
         });
     </script>
 </body>
